--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "TOKEN": "",
-    "ID": "",
-    "HASH": "",
+    "TOKEN": "7793234800:AAGPApFJ_4D6_3ublOCQV9Brd_4IWIj8_w0",
+    "ID": "26775695",
+    "HASH": "b15bb60859bef151762fc5d9eb206c67",
     "Laravel_Session": "",
     "XSRF_TOKEN": "",
     "GDTot_Crypt": "",
